<resources>
    <string name="app_name">FishingTrip</string>
    <string name="btn_login">Login</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_update">Update</string>
    <string name="btn_register">Register</string>
    <string name="btn_add_fishing_trip">Add Fishing Trip</string>
    <string name="btn_is_trip_active"> </string>
    <string name="hint_username">username</string>
    <string name="hint_password">password</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_email">email</string>
    <string name="hint_location">Fishing Location</string>
    <string name="hint_species">Species</string>X
    <string name="hint_length">Length</string>
    <string name="hint_weight">Weight</string>
    <string name="hint_method">Fishing method</string>
    <string name="hint_water_type">Water type</string>
    <string name="hint_trip_ended">Trip Ended</string>
    <string name="row_fishing_trip">Fishing Trip Row</string>
    <string name="row_app_user">App User Row</string>
    <string name="row_catch">Catch Row</string>
    <string name="txt_header_profile">Profile</string>
    <string name="txt_header_profile_develop">This page is under development..</string>
    <string name="txt_header_home">Home</string>
    <string name="txt_header_register">Register New User</string>
    <string name="txt_header_create_trip">Create New Fishing Trip</string>
    <string name="txt_latest_trips">Your latest trips: </string>
    <string name="new_fishing_trip">New Trip</string>
    <string name="all_fishing_trips">Your Trips</string>
    <string name="api">API</string>
    <string name="api_btn_GET">GET Request</string>
    <string name="api_btn_POST">POST Request</string>
    <string name="api_btn_PUT">PUT Request</string>
    <string name="api_btn_DELETE">DELETE Request</string>
    <string name="api_txt_result">Request Result</string>
    <string name="api_txt_id">ID</string>
    <string name="api_txt_full_name">Name</string>
    <string name="api_txt_email">Email</string>
    <string name="api_context_view_details">View Details</string>
    <string name="end_of_trip">End Trip</string>
    <string name="add_catch">+ Add Catch</string>

    <string-array name="fishingMethod">
        <item>Spinning</item>
        <item>Fly Fishing</item>
        <item>Trolling</item>
        <item>Vertical Fishing</item>
    </string-array>

    <string-array name="waterType">
        <item>Lake</item>
        <item>River</item>
        <item>Ocean</item>
    </string-array>

    <string-array name="species">
        <item>Perch</item>
        <item>Northern Pike</item>
        <item>Zander</item>
        <item>Salmon</item>
    </string-array>

</resources>
