<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_header_register"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"
        android:backgroundTint="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRegister" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:backgroundTint="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/inputUserName"
        app:layout_constraintStart_toStartOf="@+id/inputUserName"
        app:layout_constraintTop_toBottomOf="@+id/inputUserName" />

    <EditText
        android:id="@+id/inputFirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/hint_first_name"
        android:inputType="textPersonName"
        android:backgroundTint="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/inputPassword"
        app:layout_constraintStart_toStartOf="@+id/inputPassword"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    <EditText
        android:id="@+id/inputLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_last_name"
        android:inputType="textPersonName"
        android:backgroundTint="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/inputFirstname"
        app:layout_constraintStart_toStartOf="@+id/inputFirstname"
        app:layout_constraintTop_toBottomOf="@+id/inputFirstname" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/colorText"
        android:textColorHint="@color/colorText"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/inputLastName"
        app:layout_constraintStart_toStartOf="@+id/inputLastName"
        app:layout_constraintTop_toBottomOf="@+id/inputLastName" />

    <Button
        android:id="@+id/btnRegisterSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@color/colorViewBackground"
        android:text="@string/btn_register"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/inputEmail"
        app:layout_constraintStart_toStartOf="@+id/inputEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>