<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground">

    <EditText
        android:id="@+id/inputUpdateMethod"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints=""
        android:backgroundTint="@color/colorText"
        android:ems="10"
        android:hint="@string/hint_method"
        android:inputType="textPersonName"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/inputUpdateWaterType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:backgroundTint="@color/colorText"
        android:ems="10"
        android:hint="@string/hint_water_type"
        android:inputType="textPersonName"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/inputUpdateMethod"
        app:layout_constraintStart_toStartOf="@+id/inputUpdateMethod"
        app:layout_constraintTop_toBottomOf="@+id/inputUpdateMethod"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/inputUpdateLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:backgroundTint="@color/colorText"
        android:ems="10"
        android:hint="@string/hint_location"
        android:inputType="textPersonName"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/inputUpdateWaterType"
        app:layout_constraintStart_toStartOf="@+id/inputUpdateWaterType"
        app:layout_constraintTop_toBottomOf="@+id/inputUpdateWaterType"
        tools:targetApi="lollipop" />

    <Switch
        android:id="@+id/swUpdateTripIsActive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/hint_trip_ended"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="@+id/inputUpdateLocation"
        app:layout_constraintTop_toBottomOf="@+id/inputUpdateLocation" />

    <Button
        android:id="@+id/btnUpdateFishingTrip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:text="@string/btn_update"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/inputUpdateLocation"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputUpdateLocation"
        app:layout_constraintTop_toBottomOf="@+id/swUpdateTripIsActive"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>