<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackground">

    <EditText
        android:id="@+id/inputUpdateUserName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:autofillHints=""
        android:backgroundTint="@color/colorText"
        android:ems="10"
        android:hint="@string/hint_username"
        android:inputType="textPersonName"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/inputUpdatePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:backgroundTint="@color/colorText"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/inputUpdateUserName"
        app:layout_constraintStart_toStartOf="@+id/inputUpdateUserName"
        app:layout_constraintTop_toBottomOf="@+id/inputUpdateUserName"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/inputUpdateFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:backgroundTint="@color/colorText"
        android:ems="10"
        android:hint="@string/hint_first_name"
        android:inputType="textPersonName"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/inputUpdatePassword"
        app:layout_constraintStart_toStartOf="@+id/inputUpdatePassword"
        app:layout_constraintTop_toBottomOf="@+id/inputUpdatePassword"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/inputUpdateLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:backgroundTint="@color/colorText"
        android:ems="10"
        android:hint="@string/hint_last_name"
        android:inputType="textPersonName"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/inputUpdateFirstName"
        app:layout_constraintStart_toStartOf="@+id/inputUpdateFirstName"
        app:layout_constraintTop_toBottomOf="@+id/inputUpdateFirstName"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/inputUpdateEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:backgroundTint="@color/colorText"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText"
        app:layout_constraintEnd_toEndOf="@+id/inputUpdateLastName"
        app:layout_constraintStart_toStartOf="@+id/inputUpdateLastName"
        app:layout_constraintTop_toBottomOf="@+id/inputUpdateLastName"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/btnConfirmUpdateUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:text="@string/btn_update"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/inputUpdateEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputUpdateEmail"
        app:layout_constraintTop_toBottomOf="@+id/inputUpdateEmail" />
</androidx.constraintlayout.widget.ConstraintLayout>