<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.ApiActivity">

    <ListView
        android:id="@+id/usersList"
        android:layout_width="0dp"
        android:layout_height="509dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnGet"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="32dp"
        android:background="@color/colorAccent"
        android:text="@string/api_btn_GET"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPost"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnPost"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:background="@color/colorAccent"
        android:text="@string/api_btn_POST"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="@+id/btnGet"
        app:layout_constraintEnd_toStartOf="@+id/btnPut"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnGet"
        app:layout_constraintTop_toTopOf="@+id/btnGet" />

    <Button
        android:id="@+id/btnPut"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:background="@color/colorAccent"
        android:text="@string/api_btn_PUT"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="@+id/btnPost"
        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPost"
        app:layout_constraintTop_toTopOf="@+id/btnPost" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#804040"
        android:text="@string/api_btn_DELETE"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="@+id/btnPut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPut"
        app:layout_constraintTop_toTopOf="@+id/btnPut" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/api_txt_result"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toTopOf="@+id/btnGet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>