<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/txtHeaderHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_header_home"
        android:textColor="@color/colorText"
        android:textSize="24sp"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.028" />

    <Button
        android:id="@+id/btnNewFishingtrip"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@color/colorViewBackground"
        android:text="@string/new_fishing_trip"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHeaderHome" />

    <Button
        android:id="@+id/btnTrips"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorViewBackground"
        android:text="@string/all_fishing_trips"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="@+id/btnNewFishingtrip"
        app:layout_constraintTop_toBottomOf="@+id/btnNewFishingtrip" />

    <Button
        android:id="@+id/btnWeather"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorViewBackground"
        android:text="@string/weather"
        android:textColor="@color/colorText"
        app:layout_constraintStart_toStartOf="@+id/btnTrips"
        app:layout_constraintTop_toBottomOf="@+id/btnTrips" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWeather" />
</androidx.constraintlayout.widget.ConstraintLayout>